[package]
name = "advent"
version = "0.1.0"
authors = ["tinaun <tinagma@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.8"
permutohedron = "0.2"
serde_scan = "0.3"
serde = "1.0"
serde_derive = "1.0"
image = { version = "0.20", features = ["png"] }
regex = "1.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "advent"
harness = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "advent"
path = "src/bin.rs"